# deepin-kwin-multitasking

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  accessible.h  factory.cpp  multitasking.cpp  multitasking.h  multitasking_model.cpp  multitasking_model.h  windowthumbnail.h
